# fauveal-subspace

./: .gitignore  default.nix  fa  hasktorch-skeleton.cabal  hie.yaml  shell.nix
fauveal-app/: .envrc  .gitignore  default.nix  hie.yaml  static.out
fauveal-app/.obelisk/impl/: github.json
fauveal-app/backend/: backend.cabal
fauveal-app/backend/src/: Backend.hs
fauveal-app/backend/src/Backend/: NotifyHandler.hs  RequestHandler.hs  Schema.hs  Transaction.hs  ViewSelectorHandler.hs
fauveal-app/common/: common.cabal
fauveal-app/common/src/Common/: App.hs  I18n.hs  Prelude.hs  Route.hs
fauveal-app/common/src/Common/Prelude/: Generics.hs  Orphans.hs  UUID.hs
fauveal-app/common/src/Data/Functor/: Dyn.hs  Poly.hs
fauveal-app/dep/reflex-platform/: github.json
fauveal-app/dep/rhyolite/: github.json
fauveal-app/frontend/: frontend.cabal
fauveal-app/frontend/src/: Frontend.hs
fauveal-app/frontend/src/Frontend/: Common.hs  I18n.hs  Layout.hs
fauveal-app/frontend/src/Frontend/Layout/: Edge.hs
fauveal-app/scripts/: makeEnvRcFromPATH
fauveal-app/static/: default.nix
fauveal-app/static/src/: node-packages.nix  package.json  tailwind.config.js  webpack.config.js
fauveal-app/static/src/css/: styles.css
nix/: stack-shell.nix
python/: requirements.txt  shell.nix
python/munger/: .coveragerc  .gitignore  .isort.cfg  AUTHORS.md  LICENSE.txt  README.md  environment.yml  setup.cfg  setup.py
python/munger/docs/: conf.py  index.md
python/munger/notebooks/: Ana'sTiles.ipynb  DownTheImages.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  template.ipynb
python/munger/scripts/: process_data.py
python/munger/src/munger/: Cluster.py  Go.py  Job.py
python/munger/tests/: conftest.py
serve/: Main.hs
src/: Autoencoder.hs  HasktorchSkeleton.hs  ImageClusterSampler.hs
train/: Main.hs
