cabal-version:       2.2
name:                hasktorch-skeleton
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             MIT
license-file:        LICENSE
author:              The Hasktorch Team
maintainer:          hasktorch@gmail.com
copyright:           2020 The Hasktorch Team
category:            Tensors, Machine Learning, AI
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.8.3


common base
  ghc-options: -Wall -Wextra -Wno-unrecognised-pragmas -Wno-orphans -fplugin GHC.TypeLits.Normalise -fplugin GHC.TypeLits.KnownNat.Solver -fplugin GHC.TypeLits.Extra.Solver -fconstraint-solver-iterations=0

  default-language: Haskell2010
  build-depends:
      base >= 4.12 && < 5
    , hasktorch >= 0.2 && < 0.3
    , ghc-typelits-extra
    , ghc-typelits-knownnat
    , ghc-typelits-natnormalise
    , text
    , cassava
    , vector
    , containers
    , bytestring
    , transformers
    , random-shuffle
    , mtl

common binary-base
  import: base
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  -- build-depends: fauveal-subspace

library
  import: base
  exposed-modules:
    HasktorchSkeleton, Autoencoder, ImageClusterSampler
  hs-source-dirs: src

executable server
  import: binary-base
  main-is: Main.hs
  hs-source-dirs: exe
  build-depends:     hasktorch-skeleton,
       libtorch-ffi
                     , aeson
                     , servant-server
                     , serialise
                     , warp
