name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: adjunctions
    , aeson
    , adjunctions
    , aeson-gadt-th
    , base
    , bytestring
    , constraints
    , constraints-extras
    , containers
    , distributive
    , data-default
    , database-id-class
    , deepseq
    , base64-bytestring
    , dependent-map
    , dependent-sum
    , dependent-sum-template
    , hashable
    , diagrams
    , diagrams-lib
    , diagrams-svg
    , diagrams-contrib
    , either
    , exceptions
    , generic-data
    , fin
    , lens
    , monoidal-containers
    , monad-control
    , mtl
    , obelisk-route
    , random
    , reflex
    , reflex-dom-core
    , rhyolite-aeson-orphans
    , rhyolite-common
    , semialign
    , semigroups
    , some
    , text
    , tf-random
    , these
    , time
    , timezone-series
    , transformers-base
    , universe
    , universe-base
    , uuid-types
    , vec
    , witherable
  exposed-modules:
    Common.App
    Common.I18n
    Common.Prelude
    Common.Prelude.Generics
    Common.Prelude.Orphans
    Common.Prelude.UUID
    Common.Route
    Data.Functor.Poly
    Data.Functor.Dyn
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
